--- a/info_raw_dataD.html
+++ b/info_raw_dataD.html
@@ -1,39 +1,20 @@
 <!DOCTYPE html>
 <html>
- <div class="g wF4fFd JnwWd g-blk" data-hveid="CAYQAA" data-ved="2ahUKEwiMqL2c_PqDAxV9L0QIHbcUAwwQijYoAHoECAYQAA">
-  <div class="dG2XIf XzTjhb">
-   <div>
-    <div>
-     <div class="xpdopen rYczAc">
-      <div class="ifM9O">
-       <div>
-        <div>
-         <div class="EfDVh wDYxhc NFQFxe viOShc" data-md="132">
-          <div class="obcontainer">
-           <h2 class="bNg8Rb OhScic zsYMMe BBwThe" style="clip:rect(1px,1px,1px,1px);height:1px;overflow:hidden;position:absolute;white-space:nowrap;width:1px;z-index:-1000;-webkit-user-select:none">
-            Currency converter
-           </h2>
-           <div data-hveid="CAcQAA" lang="en-IL">
-            <div class="Ww4FFb vt6azd">
-             <div aria-label="Currency exchange rate converter" class="bk7x" jsaction="rcuQ6b:npT2md;aW1lyc:pHtaXc;Wtqxqe:DA0Nf;eoysHf:Kq6hjd" jscontroller="N62ewe" jsdata="LDneMc;_;B0C1ls" role="region" tabindex="0">
-              <div class="vrG0ub EyBRub yf" data-async-type="crypto_update" data-jiis="up" data-ved="2ahUKEwiMqL2c_PqDAxV9L0QIHbcUAwwQ_sIDegQIBxAC" id="crypto-updatable_2">
-               <div class="YB4h9 ky4hfd" data-ekc="" data-ved="2ahUKEwiMqL2c_PqDAxV9L0QIHbcUAwwQlokGegQIBxAE" jsaction="kPzEO:MlP2je;qjLxRc:MlP2je;w8f1fc:hRwSgb" jscontroller="P10Owf" jsdata="vST7rb;_;B0C1lw">
-                <span aria-label="Close" class="Job8vb z1asCe wuXmqc" data-ved="2ahUKEwiMqL2c_PqDAxV9L0QIHbcUAwwQmIkGegQIBxAF" jsaction="kEOk4d" role="button" style="height:20px;line-height:20px;width:20px" tabindex="0">
-                 <svg focusable="false" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z">
-                  </path>
-                 </svg>
-                </span>
-                <div aria-level="1" class="C85rO" role="heading">
-                 Choose what you’re giving feedback on
-                </div>
-               </div>
-              </div>
-             </div>
-            </div>
-           </div>
-          </div>
-         </div>
+ <div class="eqAnXb" id="res" role="main">
+  <div id="search">
+   <div data-hveid="CAIQGQ" data-ved="2ahUKEwjHhvaKgcKEAxVIS2cHHZiBDX0QGnoECAIQGQ">
+    <h1 class="bNg8Rb OhScic zsYMMe BBwThe" style="clip:rect(1px,1px,1px,1px);height:1px;overflow:hidden;position:absolute;white-space:nowrap;width:1px;z-index:-1000;-webkit-user-select:none">
+     Search Results
+    </h1>
+    <div class="dURPMd" data-async-context="query:will%20it%20rain%20tomorrow%20in%20rishpon%3F" eid="wNjYZcemF8iWnesPmIO26Ac" id="rso">
+     <hr class="v5jHUb"/>
+     <div class="ULSxyf">
+      <div class="MjjYud">
+       <div class="Ww4FFb vt6azd obcontainer wDYxhc" data-md="2">
+        <div data-hveid="CAwQAA" data-ve-view="" data-ved="2ahUKEwjHhvaKgcKEAxVIS2cHHZiBDX0QohJ6BAgMEAA">
+         <h2 class="bNg8Rb OhScic zsYMMe BBwThe" style="clip:rect(1px,1px,1px,1px);height:1px;overflow:hidden;position:absolute;white-space:nowrap;width:1px;z-index:-1000;-webkit-user-select:none">
+          Weather result
+         </h2>
         </div>
        </div>
       </div>
